@@ -1,6 +1,7 @@
 linux (4.9.1-1~exp2) UNRELEASED; urgency=medium
 
   * abiupdate.py: Use current config instead of downloading previous config
+  * abiupdate.py: Update base URLs
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000
 
